# goit-pythonweb-hw-06

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0c2919cf4708_create_tables.py
app/: db.py  models.py  selects.py
cli/: run_test.py  seed.py
